--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!-- 资源PRO - ZiYuanPro.Com - 免费分享精品资源网站 -->
+
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8"> 
-    <title>资源PRO - ZiYuanPro.Com</title>
+    <title>zhiyin工具</title>
     <meta name="keywords" content="资源PRO - ZiYuanPro.Com"/>
     <meta name="description" content="资源PRO - ZiYuanPro.Com"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
