--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="utf-8"> 
     <title>zhiyin工具</title>
-    <meta name="keywords" content="资源PRO - ZiYuanPro.Com"/>
-    <meta name="description" content="资源PRO - ZiYuanPro.Com"/>
+    <meta name="keywords" content="zhiyin工具"/>
+    <meta name="description" content="zhiyin工具"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="https://cdn.bootcss.com/zui/1.8.1/css/zui.min.css">
 <script src="https://cdn.bootcss.com/zui/1.8.1/lib/jquery/jquery.js"></script>
@@ -19,13 +19,13 @@
             <h1 class="logo">
                 <a href="index.html">
                     <img src="images/ico.png">
-                    <span>资源PRO导航</span>
+                    <span>zhiyin工具</span>
                 </a>
             </h1>
             <!--
             <nav class="nav">
                 <ul>
-                    <li><a href="https://www.ziyuanpro.com" target="_blank"></a></li>
+                    <li><a href="https://zhiyintechnology.github.io/gongju/" target="_blank"></a></li>
                 </ul>
             </nav>
             <button class="nav-btn visible-xs visible-sm">
@@ -44,7 +44,7 @@
 	  <div class="search">
 		<div class="search-box">
 		  <img class="search-icon" src="images/logo_4.jpg">
-		  <input type="text" id="txt" class="search-input" placeholder="善用搜索">
+		  <input type="text" id="txt" class="search-input" placeholder="搜索">
 		  <button class="search-btn visible-sm visible-md visible-lg" id="search-btn">搜索</button>
 		  <i class="search-clear icon icon-remove-sign" style="display: none;"></i>
 		</div>
@@ -56,7 +56,7 @@
 		<div class="search-engine" style="display: none;">
 		  <div class="search-engine-head">
 			<strong class="search-engine-tit">选择默认搜索引擎：</strong>
-			<div class="search-engine-tool">搜索热词： <span id="hot-btn" class="off"></span></div>
+			<div class="search-engine-tool"> <span id="hot-btn" class="off"></span></div>
 		  </div>
 		  <ul class="search-engine-list">
 		  </ul>
@@ -66,13 +66,13 @@
 		<div class="row dh">
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">搜索 · 网页</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">工具</strong></div>
 					
 					<div class="col-xs-4 mb-2">
-						<a href="https://www.ziyuanpro.com" target="_blank">资源PRO</a>
+						<a href="https" target="_blank">1</a>
 					</div>
 					<div class="col-xs-4 mb-2">
-						<a href="https://www.ziyuanpro.com/" target="_blank">免费资源网</a>
+						<a href="https" target="_blank">2</a>
 					</div>
 
 					<div class="col-xs-4 mb-2">
@@ -102,7 +102,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">搜索 · 磁力</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">搜索</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -138,7 +138,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">搜索 · 图片</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">搜索</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -174,7 +174,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">美图 · 在线</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">111</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -210,7 +210,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">软件 · 绿软</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">软件</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -246,7 +246,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">电影 · 在线</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">1</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -282,7 +282,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">电影 · 下载</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">7</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -318,7 +318,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">电影 · APP</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">7</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -357,7 +357,6 @@
 		</div>
 </div>
 
-<!-- 资源PRO - ZiYuanPro.Com - 免费分享精品资源网站 -->
 </div>
 </div>
 <footer class="footer text-center bg-white">
