--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div class="col-xs-12"><strong class="dhname" id="1">工具</strong></div>
 					
 					<div class="col-xs-4 mb-2">
-						<a href="https" target="_blank">1</a>
+						<a href="https://zhiyintechnology.github.io/time/" target="_blank">zhiyin桌面时钟</a>
 					</div>
 					<div class="col-xs-4 mb-2">
 						<a href="https" target="_blank">2</a>
