--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</div>
 
 					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
+						<a href="https://zhiyintechnology.github.io/openai/" target="_blank">zhiyin openAI</a>
 					</div>
 					<div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
