--- a/index.html
+++ b/index.html
@@ -102,43 +102,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">搜索</strong></div>
-<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-					<div class="col-xs-4 mb-2">
-						
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-
-					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-
-					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-
-					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-6 col-md-4 mb-3 dh">
-				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">搜索</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">待添加</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
@@ -210,7 +174,43 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">软件</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">待添加</strong></div>
+<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+					<div class="col-xs-4 mb-2">
+						
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+
+					<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+					<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+
+					<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+					<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+
+					<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+					<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+<div class="col-xs-4 mb-2">
+						<a href="index.html" target="_blank">待添加</a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6 col-md-4 mb-3 dh">
+				<div class="row">
+					<div class="col-xs-12"><strong class="dhname" id="1">待添加</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
