--- a/index.html
+++ b/index.html
@@ -18,21 +18,11 @@
         <div class="main">
             <h1 class="logo">
                 <a href="index.html">
-                    <img src="images/ico.png">
+                    <img src="images/">
                     <span>zhiyin工具</span>
                 </a>
             </h1>
-            <!--
-            <nav class="nav">
-                <ul>
-                    <li><a href="https://zhiyintechnology.github.io/gongju/" target="_blank"></a></li>
-                </ul>
-            </nav>
-            <button class="nav-btn visible-xs visible-sm">
-                <span class="icon-line top"></span>
-                <span class="icon-line middle"></span>
-                <span class="icon-line bottom"></span>
-            </button>-->
+
         </div>
 	</div>
 	<div class="not_operational"></div>
@@ -40,29 +30,6 @@
 <div id="content" data-customize="true" data-customtheme="true" class="default-bg">
 <div class="main-index">
 <div class="container content-box">
-	<section class="sousuo">
-	  <div class="search">
-		<div class="search-box">
-		  <img class="search-icon" src="images/logo_4.jpg">
-		  <input type="text" id="txt" class="search-input" placeholder="搜索">
-		  <button class="search-btn visible-sm visible-md visible-lg" id="search-btn">搜索</button>
-		  <i class="search-clear icon icon-remove-sign" style="display: none;"></i>
-		</div>
-		<!-- 搜索热词 -->
-		<div class="box search-hot-text" id="box" style="display: none;">
-		  <ul></ul>
-		</div>
-		<!-- 搜索引擎 -->
-		<div class="search-engine" style="display: none;">
-		  <div class="search-engine-head">
-			<strong class="search-engine-tit">选择默认搜索引擎：</strong>
-			<div class="search-engine-tool"> <span id="hot-btn" class="off"></span></div>
-		  </div>
-		  <ul class="search-engine-list">
-		  </ul>
-		</div>
-	  </div>
-	</section>
 		<div class="row dh">
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
