--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					</div>
 
 					<div class="col-xs-4 mb-2">
-						<a href="https://zhiyintechnology.github.io/openai/" target="_blank">zhiyin openAI</a>
+						<a href="index.html" target="_blank">待添加</a>
 					</div>
 					<div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
@@ -66,7 +66,7 @@
 			</div>
 			<div class="col-sm-6 col-md-4 mb-3 dh">
 				<div class="row">
-					<div class="col-xs-12"><strong class="dhname" id="1">待添加</strong></div>
+					<div class="col-xs-12"><strong class="dhname" id="1">软件</strong></div>
 <div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
