--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <div class="container" style="padding-right: 0px;padding-left: 0px;">
         <div class="main">
             <h1 class="logo">
-                <a href="index.html">
-                    <img src="images/">
-                    <span>zhiyin工具</span>
+                <a href="">
+                   <span>zhiyin工具</span>
                 </a>
             </h1>
 
