--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container" style="padding-right: 0px;padding-left: 0px;">
         <div class="main">
             <h1 class="logo">
-                <a href="">
+                <a href="https://zhiyintechnology.github.io/home/index.html">
                    <span>zhiyin工具</span>
                 </a>
             </h1>
