--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 				<div class="row">
 					<div class="col-xs-12"><strong class="dhname" id="1">软件</strong></div>
 <div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
+						<a href="https://59-47-225-46.d.cjjd15.com:30443/download-cdn.123pan.cn/123-698/911a400c/1813688828-0/911a400cf61e8589ea5e3bc1628772ba/c-m3?v=5&t=1684214960&s=1684214960a0936db3e88f43b3980939561bbca628&r=QH8BVN&filename=OpenHarmony_zhiyinUI_For_Xiaomi_6_H.B3.2.K.23.zip&x-mf-biz-cid=eb169115-393d-429f-8328-aed86ab47765-a0d664&auto_redirect=0&xmfcid=1fd3f901-d268-4874-a33d-3b1712b97c15-cd8a62355-3015-30" target="_blank">OpenHarmony_zhiyinUI_For_Xiaomi_6_H.B3.2.K.23</a>
 					</div>
 					<div class="col-xs-4 mb-2">
 						
-						<a href="index.html" target="_blank">待添加</a>
+						<a download="index.html">OpenHarmony_zhiyinUI_For_Xiaomi_6_H.B3.2.K.23</a>
 					</div>
 
 					<div class="col-xs-4 mb-2">
