--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-    <title><link href="img/logo">zhiyin工具</title>
+    <title href="img/logo">zhiyin工具</title>
     <meta name="keywords" content="zhiyin工具"/>
     <meta name="description" content="zhiyin工具"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
