--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
 <meta charset="utf-8"> 
     <title>zhiyin工具</title>
-	<link href="img/logo">
     <meta name="keywords" content="zhiyin工具"/>
     <meta name="description" content="zhiyin工具"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+<link rel="shortcut icon" href="img/logo">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
