--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-    <title>zhiyin工具</title>
-    <meta name="keywords" content="zhiyin工具"/>
-    <meta name="description" content="zhiyin工具"/>
+    <title>zhiyin</title>
+    <meta name="keywords" content="zhiyin"/>
+    <meta name="description" content="zhiyin"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="shortcut icon" href="img/logo">
 <link rel="stylesheet" href="style.css">
