--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="zhiyin"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="style.css">
+	<style type="text/css">
+		#datetime{text-align: right;}
+	</style>
 </head>
 <body>
 	<div id="datetime">
