--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="style.css">
 	<style type="text/css">
-		#datetime{text-align: right;color：#000;}
+		#datetime{text-align: right;color: #000;}
 	</style>
 </head>
 <body>
