--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="main">
             <h1 class="logo">
                 <a href="https://zhiyintechnology.github.io/home/index.html">
-                   <span>zhiyin工具</span>
+                   <span>zhiyin</span>
                 </a>
             </h1>
         </div>
