--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="row">
 					<div class="col-xs-12"><strong class="dhname" id="1">软件</strong></div>
 <div class="col-xs-4 mb-2">
-						<a href="https://59-47-225-45.d.cjjd15.com:30443/download-cdn.123pan.cn/123-698/911a400c/1813688828-0/911a400cf61e8589ea5e3bc1628772ba/c-m3?v=5&t=1684565348&s=1684565348dfd41d7c6585272149c8331fba16f71c&r=MAM19F&filename=OpenHarmony_zhiyinUI_For_Xiaomi_6_H.B3.2.K.23.zip&x-mf-biz-cid=6f4f1511-0d14-41dc-8c42-4aadf162789a-584000&auto_redirect=0&xmfcid=717ee3f4-ce19-4b6c-b971-61148994073c-9eed82220-6460-65" target="_blank">OpenHarmony_zhiyinUI_For_Xiaomi_6_H.B3.2.K.23</a>
+						<a href="https://ivedumo0-my.sharepoint.com/personal/s13433_office_iv_edu_mo/_layouts/15/download.aspx?UniqueId=33a2ed1d%2D5f1d%2D4a63%2Da7f8%2D66a34ddbb61c" target="_blank">OpenHarmony_zhiyinUI_For_Xiaomi_6_H.B3.2.K.23</a>
 					</div>
 					<div class="col-xs-4 mb-2">
 						
