--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 					<div class="col-xs-4 mb-2">
 						<a href="https://zhiyinchatgpt.vercel.app/" target="_blank">zhiyin ChatGPT</a>
 					</div>
+					<p id="ChatGPT">*目前仅可在港澳台或海外地区访问</p>
 					<div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
 					</div>
