--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
 				</div>
 			</div>
 		</div>
+	<div class="col-xs-4 mb-2">
+						<a href="https://zhiyintechnology.github.io/jimi.zip/" target="_blank">zhiyin机密（仅内部人员访问）</a>
+					</div>
 </div>
 
 </div>
