--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 				</div>
 			</div>
 		</div>
-	<div class="col-xs-4 mb-2">
+	<div class="col-xs-12">
 						<a href="https://zhiyintechnology.github.io/jimi.zip/" target="_blank">zhiyin机密（仅内部人员访问）</a>
 					</div>
 </div>
