--- a/index.html
+++ b/index.html
@@ -317,9 +317,14 @@
 				</div>
 			</div>
 		</div>
-	<div class="col-xs-12">
-						<a href="https://zhiyintechnology.github.io/jimi.zip/" target="_blank">zhiyin机密（仅内部人员访问）</a>
+			<div class="col-sm-6 col-md-4 mb-3 dh">
+				<div class="row">
+					<div class="col-xs-12"><strong class="dhname" id="1"></strong></div>
+<div class="col-xs-4 mb-2">
+						<a href="zhiyintechnology.github.io/jimi.zip" target="_blank">zhiyin机密</a>
 					</div>
+				</div>
+			</div>
 </div>
 
 </div>
