--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 				<div class="row">
 					<div class="col-xs-12"><strong class="dhname" id="1"></strong></div>
 <div class="col-xs-4 mb-2">
-						<a href="zhiyintechnology.github.io/jimi.zip" target="_blank">zhiyin机密</a>
+						<a href="https://zhiyintechnology.github.io/jimi.zip/" target="_blank">zhiyin机密</a>
 					</div>
 				</div>
 			</div>
