--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 
 					<div class="col-xs-4 mb-2">
-						<a href="https://zhiyinchatgpt.zeabur.app" target="_blank">zhiyin ChatGPT</a>
+						<a href="https://zhiyincgpt.zeabur.app" target="_blank">zhiyin ChatGPT</a>
 					</div>
 					<div class="col-xs-4 mb-2">
 						<a href="index.html" target="_blank">待添加</a>
