--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="zhiyin"/>
     <meta name="description" content="zhiyin"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="img/logo" type="image/x-icon">
+<link rel="icon" href="logo.ico" type="image/x-icon">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
