--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<a href="https://zhiyingpt.zeabur.app" target="_blank">zhiyin ChatGPT</a>
 					</div>
 					<div class="col-xs-4 mb-2">
-						<a href="index.html" target="_blank">待添加</a>
+						<a href="https://zhiyintechnology.github.io/suijishu/" target="_blank">zhiyin随机数生成器</a>
 					</div>
 
 					<div class="col-xs-4 mb-2">
