--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					</div>
 					<div class="col-xs-4 mb-2">
 						
-						<a href="index.html" target="_blank">待添加</a>
+						<a href="" target="_blank">OpenHarmony_zhiyinUI_For_Xiaomi_6_H.B3.2.K.23安裝教程</a>
 					</div>
 
 					<div class="col-xs-4 mb-2">
